--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -6,7 +6,7 @@
 
   <div class="grow">
     <h1 class="text-lg font-medium text-gray-800 dark:text-neutral-200">
-      Alexis LLerena
+      Alexis LLerena Saavedra
     </h1>
     <p class="text-sm text-gray-600 dark:text-neutral-400">
       Desarrollador Full Stack
